# clean_architecture

./: README.md  pyproject.toml
src/: app.py  depends.py
src/repositories/: books.py
src/routing/: books.py
src/schemas/: books.py
src/services/: books.py
