[tool.poetry]
name = "clean-code"
version = "0.1.0"
description = ""
authors = ["andrey <a.arbatskov@purpleplane.ru>"]
readme = "README.md"
packages = [{include = "clean_code"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
